# HHL-Algorithm-Implementation

./: .env_example  README.md  environment.yml  pyproject.toml  requirements.txt  run_experiments.py
notebooks/: 4x4.ipynb  Projekt_HHL.ipynb
src/: classical_baseline.py  quantum_model.py
